objects/DependencyTest__c.object
<CustomObject>
    <fields>
        <fullName>Field_A__c</fullName>
        <label>Field_A</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Field_B__c</fullName>
        <label>Field_B</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>USD__c</fullName>
        <defaultValue>0</defaultValue>
        <label>USD</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <label>DependencyTest</label>
    <nameField>
        <label>DependencyTest Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DependencyTest</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>